--- a/src/app/components/main/project-creation-view/project-creation-view.component.html
+++ b/src/app/components/main/project-creation-view/project-creation-view.component.html
@@ -1,4 +1,4 @@
-[[[[[[[[<form (ngSubmit)="onSubmit()" class="form-container" #projectForm="ngForm" novalidate>]]]]]]]]
+<form (ngSubmit)="onSubmit()" class="form-container" #projectForm="ngForm" novalidate>
     <mat-form-field>
       <input matInput placeholder="Nazwa projektu" [(ngModel)]="projectName" name="projectName" required>
       <mat-error>Nazwa projektu jest wymagana.</mat-error>
