--- a/src/app/components/main/sidenav/sidenav.component.scss
+++ b/src/app/components/main/sidenav/sidenav.component.scss
@@ -32,6 +32,7 @@ mat-sidenav-container {
   mat-sidenav-content {
     padding: 20px;
     box-sizing: border-box;
+    //background-color: rgb(152, 171, 179);
   }
   
   mat-icon {
